fix: project info clipping

--- a/src/scss/components/projects.scss
+++ b/src/scss/components/projects.scss
@@ -100,12 +100,12 @@
           margin: 20px;
         }
         .hello {
-             position: absolute;
-            left: 72px;
-            top: 37px;
-            width: 396px;
-            height: 254px;
-            background-color: black;
+          position: absolute;
+          left: 72px;
+          top: 37px;
+          width: 396px;
+          height: 254px;
+          background-color: black;
           @media (max-width: 500px) {
             left: 63px;
             top: 32px;
@@ -117,8 +117,8 @@
             height: -webkit-fill-available;
             margin: 0;
           }
-          video{
-              border-radius: 5px;
+          video {
+            border-radius: 5px;
           }
         }
         .hello2 {
@@ -215,7 +215,6 @@
       }
       @media (max-width: $mid-breakpoint) {
         margin: 0px 45px;
-        max-width: 100%;
         h3 {
           text-align: center;
         }
